--- a/index.html
+++ b/index.html
@@ -66,33 +66,14 @@
         <div class="row">
           <div class="col-12">
             
-            <h2><img src="./pic/avatar_2.png" alt="" width="80" height="80">
-              <i>Endora</i>:
-              Video Generation Models as
-              Endoscopy Simulators <br>
+            <h2> <!-- <img src="./pic/avatar_2.png" alt="" width="80" height="80"> -->
+              <i>SurgSora</i>:
+              Decoupled RGBD-Flow Diffusion Model for 
+              Controllable Surgical Video Generation <br>
             </h2>
-            <h4 style="color:#5a6268;">MICCAI 2024 </h4>
+            <!-- <h4 style="color:#5a6268;">MICCAI 2024 </h4>  -->
             <hr>
-            <h6>
-                <a href="https://xggnet.github.io/" target="_blank">Chenxin Li</a><sup>1*</sup>,
-                <a href="https://github.com/LiuHengyu321" target="_blank">Hengyu Liu</a><sup>1*</sup>,
-                <a href="https://yifliu3.github.io/" target="_blank">Yifan Liu</a><sup>1*</sup>,
-                <a href="https://brandonyfeng.github.io/" target="_blank">Brandon Y. Feng</a><sup>2</sup>,
-                <br>
-                <a href="https://wymancv.github.io/wuyang.github.io/" target="_blank">Wuyang Li</a><sup>1</sup>,
-                <a href="https://xinyuliu-jeffrey.github.io/" target="_blank">Xinyu Liu</a><sup>1</sup>,
-                <a href="https://franciszchen.github.io/" target="_blank">Zhen Chen</a><sup>3</sup>
-                <a href="https://scholar.google.com.hk/citations?user=VU5ObUwAAAAJ&hl=zh-CN" target="_blank">Jing Shao</a><sup>4</sup>
-                <a href="http://www.ee.cuhk.edu.hk/~yxyuan/people/people.htm" target="_blank">Yixuan Yuan</a><sup>1</sup>
-              </h6>
-            <p>
-                <sup>1</sup>The Chinese University of Hong Kong &nbsp;&nbsp;
-                <sup>2</sup>Massachusetts Institute of Technology&nbsp;&nbsp;&nbsp;&nbsp;
-                <br>
-                <sup>3</sup>Centre for Artificial Intelligence and Robotics of Hong Kong &nbsp;&nbsp;&nbsp;&nbsp;
-                <sup>4</sup>Shanghai Artificial Intelligence Laboratory
-            </p>
-
+		  
             <div class="row justify-content-center">
               <div class="column">
                   <p class="mb-5"><a class="btn btn-large btn-light" href="https://arxiv.org/abs/2403.11050" role="button"  target="_blank">
@@ -369,7 +350,7 @@
 
 
   <footer class="text-center" style="margin-bottom:10px">
-      Modified from <a href="https://lioryariv.github.io/idr/" target="_blank">this website</a>
+      Modified from <a href="https://en-do-ra.github.io" target="_blank">this website</a>
   </footer>
 
 </body>
