--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="./pic/aim.ico" type="image/x-icon">
     <title>
-      Endora: Video Generation Models as Endoscopy Simulators
+      SurgSora: Decoupled RGBD-Flow Diffusion Model for Controllable Surgical Video Generation
     </title>
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
@@ -259,43 +258,6 @@
   </section>
   <br> -->
 
-  <!-- citing -->
-  <div class="container">
-    <div class="row ">
-      <div class="col-12">
-          <h3>Citation</h3>
-          <hr style="margin-top:0px">
-              <pre style="background-color: #e9eeef;padding: 1.25em 1.5em">
-<code>@article{li2024endora,
-  author    = {Chenxin Li and Hengyu Liu and Yifan Liu and Brandon Y. Feng, and Wuyang Li and Xinyu Liu, Zhen Chen and Jing shao and Yixuan Yuan},
-  title     = {Endora: Video Generation Models as Endoscopy Simulators},
-  journal   = {arXiv preprint arXiv:2403.11050},
-  year      = {2024}
-}</code>
-              </pre>
-          <hr>
-      </div>
-    </div>
-  </div>
-
-  <!-- citing
-  <div class="container">
-    <div class="row ">
-      <div class="col-12">
-          <h3>Citation</h3>
-          <hr style="margin-top:0px">
-              <pre style="background-color: #e9eeef;padding: 1.25em 1.5em">
-                <code>@article{li2024endora,
-                    author    = {Chenxin Li and Hengyu Liu and Yifan Liu and Brandon Y. Feng, and Wuyang Li and Xinyu Liu, Zhen Chen and Jing shao and Yixuan Yuan},
-                    title     = {Endora: Video Generation Models as Endoscopy Simulators},
-                    journal   = {Arxiv},
-                    year      = {2024},
-                  } </code>
-              </pre>
-          <hr>
-      </div>
-    </div>
-  </div> -->
 
   <div class="container">
     <div class="row ">
@@ -305,7 +267,7 @@
           <hr style="margin-top:0px">
           <div class="paper">
               <h2><a>Sora: Video generation models as world simulators</a></h2>
-              <p>A milestone to create realistic and imaginative scenes from text instructions </p>
+              <!-- <p>A milestone to create realistic and imaginative scenes from text instructions </p> -->
               <p>
                 <a href="https://openai.com/sora?ref=aihub.cn">[Page]</a> | <a href="https://openai.com/research/video-generation-models-as-world-simulators">[Techniqical Report]</a> </a>
               </p>
@@ -313,33 +275,21 @@
 
           <hr style="margin-top:0px">
           <div class="paper">
-              <h2><a>SV3D: Novel Multi-view Synthesis and 3D Generation from a Single Image using
-                Latent Video Diffusion</a></h2>
-              <p>An innovative framework that take an image as input and generates novel multi-view images and 3D models </p>
+              <h2><a>Endora: Video Generation Models as Endoscopy Simulators</a></h2>
+              <!-- <p>An innovative framework that take an image as input and generates novel multi-view images and 3D models </p> -->
               <p>
-                <a href="https://sv3d.github.io/">[Page]</a> | <a href="https://arxiv.org/pdf/2403.12008.pdf">[Paper]</a>
+                <a href="https://en-do-ra.github.io/">[Page]</a> | <a href="https://arxiv.org/abs/2403.11050">[Paper]</a>
               </p>
           </div>
           
           <hr style="margin-top:0px">
           <div class="paper">
-              <h2><a>EndoGaussian: Real-time Gaussian Splatting for Dynamic Endoscopic Scene Reconstruction</a></h2>
-              <p>An intial exploration into real-time surgincal scene reconstruction built on 3D Gaussian Splatting </p>
+              <h2><a>MedSora: Optical Flow Representation Alignment Mamba Diffusion Model for Medical Video Generation</a></h2>
+               <!-- <p>An intial exploration into real-time surgincal scene reconstruction built on 3D Gaussian Splatting </p> -->
               <p>
-                <a href="https://yifliu3.github.io/EndoGaussian/">[Page]</a> | <a href="https://arxiv.org/pdf/2401.12561.pdf">[Paper]</a> | <a href="https://github.com/yifliu3/EndoGaussian">[Code]</a>
+                <a href="https://wongzbb.github.io/MedSora/">[Page]</a> | <a href="https://arxiv.org/pdf/2401.12561.pdf">[Paper]</a>
               </p>
           </div>
-
-          <!-- <div class="paper">
-              <h2><a>Generator Versus Segmentor: Pseudo-healthy Synthesis</a></h2>
-              <p>
-                A pioneering attempt to recreate and edit medical visual content according to different physiological attributes
-  
-               </p>
-              <p>
-                <a href="https://link.springer.com/content/pdf/10.1007/978-3-030-87231-1_15.pdf">[Paper]</a> | <a href="https://github.com/Au3C2/GVS">[Code]</a>
-              </p>
-          </div> -->
           
           <hr>
 
