--- a/index.html
+++ b/index.html
@@ -70,27 +70,27 @@
               Decoupled RGBD-Flow Diffusion Model for 
               Controllable Surgical Video Generation <br>
             </h2>
-            <!-- <h4 style="color:#5a6268;">MICCAI 2024 </h4>  -->
+            <!-- <h4 style="color:#5a6268;">MICCAI 2024 </h4> -->
             <hr>
 		  
             <div class="row justify-content-center">
-              <div class="column">
+              <!-- <div class="column">
                   <p class="mb-5"><a class="btn btn-large btn-light" href="https://arxiv.org/abs/2403.11050" role="button"  target="_blank">
-                    <i class="fa fa-file"></i> Paper</a> </p>
-              </div>
-              <div class="column">
+                    <i class="fa fa-file"></i> Paper</a> </p> 
+              </div> -->
+              <!-- <div class="column">
                   <p class="mb-5"><a class="btn btn-large btn-light" href="https://github.com/XGGNet/Endora" role="button"  target="_blank">
                     <i class="fa fa-github-alt"></i> Code </a> </p>
-              </div>
-              <div class="column">
+              </div> -->
+              <!-- <div class="column">
                   <p class="mb-5"><a class="btn btn-large btn-light" href="https://stuxmueducn-my.sharepoint.com/:f:/g/personal/chenxinli_stu_xmu_edu_cn/EpOyWbfW6PBKqMaZwHAKnaYBJvDRAnqd4L1974eR5KC1LQ?e=uWc73k" role="button"  target="_blank">
                     <i class="fa fa-database"></i> Model </a> </p>
-              </div>
-              <div class="column">
+              </div> -->
+              <!-- <div class="column">
                   <p class="mb-5"><a class="btn btn-large btn-light" href="
                     https://youtu.be/VBw3XtGdRu8" role="button"  target="_blank">
                     <i class="fa fa-desktop"></i> Video </a> </p>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
