--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 text-center">
-            <h2>Results on Colonoscopic Dataset</h2>
+            <h2>Results on CoPESD Dataset</h2>
             <hr style="margin-top:0px">
             <video width="100%" playsinline="" autoplay="autoplay" loop="loop" preload="" muted="">
                 <source src="video/result_1.mp4" type="video/mp4">
@@ -154,7 +154,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 text-center">
-            <h2>Results on Kvasir-Capsule Dataset</h2>
+            <h2>Results on Trajectory Control</h2>
             <hr style="margin-top:0px">
             <video width="100%" playsinline="" autoplay="autoplay" loop="loop" preload="" muted="">
                 <source src="video/result_2.mp4" type="video/mp4">
@@ -168,7 +168,7 @@
     <div class="container">
       <div class="row">
         <div class="col-12 text-center">
-            <h2>Results on CholecTriplet Dataset</h2>
+            <h2>Ablation Study on Trajectory Control</h2>
             <hr style="margin-top:0px">
             <video width="100%" playsinline="" autoplay="autoplay" loop="loop" preload="" muted="">
               <source src="video/result_3.mp4" type="video/mp4">
@@ -284,7 +284,7 @@
 
 
   <footer class="text-center" style="margin-bottom:10px">
-      Modified from <a href="https://en-do-ra.github.io" target="_blank">this website</a>
+      SurgSora --T.CHEN et al.
   </footer>
 
 </body>
