--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <h2>Results on CoPESD Dataset</h2>
             <hr style="margin-top:0px">
             <video width="100%" playsinline="" autoplay="autoplay" loop="loop" preload="" muted="">
-                <source src="video/result_1.mp4" type="video/mp4">
+                <source src="video/Baseline_final.mp4" type="video/mp4">
             </video>
       </div>
     </div>
