--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <h2>Results on CoPESD Dataset</h2>
             <hr style="margin-top:0px">
             <video width="100%" playsinline="" autoplay="autoplay" loop="loop" preload="" muted="">
-                <source src="video/Baseline_final.mp4" type="video/mp4">
+                <source src="video/Baseline.mp4" type="video/mp4">
             </video>
       </div>
     </div>
@@ -157,7 +157,7 @@
             <h2>Results on Trajectory Control</h2>
             <hr style="margin-top:0px">
             <video width="100%" playsinline="" autoplay="autoplay" loop="loop" preload="" muted="">
-                <source src="video/result_2.mp4" type="video/mp4">
+                <source src="video/traj.mp4" type="video/mp4">
             </video>
       </div>
     </div>
@@ -171,7 +171,7 @@
             <h2>Ablation Study on Trajectory Control</h2>
             <hr style="margin-top:0px">
             <video width="100%" playsinline="" autoplay="autoplay" loop="loop" preload="" muted="">
-              <source src="video/result_3.mp4" type="video/mp4">
+              <source src="video/dict.mp4" type="video/mp4">
           </video>
     </div>
   </div>
