--- a/index.html
+++ b/index.html
@@ -72,7 +72,23 @@
             </h2>
             <!-- <h4 style="color:#5a6268;">MICCAI 2024 </h4> -->
             <hr>
-		  
+            <hr>
+            <h6>
+                <a href="https://davismeee.github.io/" target="_blank">Tong Chen</a><sup>1*</sup>,
+                <a href="" target="_blank">Shuya Yang</a><sup>2*</sup>,
+                <a href="" target="_blank">Junyi Wang</a><sup>3*</sup>,
+                <a href="https://longbai-cuhk.github.io/" target="_blank">Long Bai</a><sup>3</sup>,
+                <a href="https://www.ee.cuhk.edu.hk/en-gb/people/academic-staff/professors/prof-ren-hongliang" target="_blank">Hongliang Ren</a><sup>3</sup>,
+                <a href="http://www.ee.cuhk.edu.hk/~yxyuan/people/people.htm" target="_blank">Luping Zhou</a><sup>1</sup>
+              </h6>
+            <p>
+                <sup>1</sup>The University of Sydney &nbsp;&nbsp;
+                <sup>2</sup>The University of Hong Kong &nbsp;&nbsp;&nbsp;&nbsp;
+                <br>
+                <sup>3</sup>The Chinese University of Hong Kong &nbsp;&nbsp;&nbsp;&nbsp;
+		<br>
+		*: Equal Contribution; &dagger: Project Lead.
+            </p> 
             <div class="row justify-content-center">
               <!-- <div class="column">
                   <p class="mb-5"><a class="btn btn-large btn-light" href="" role="button"  target="_blank">
