--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
 		*: Equal Contribution; †: Project Lead.
             </p> 
             <div class="row justify-content-center">
-              <!-- <div class="column">
+              <div class="column">
                   <p class="mb-5"><a class="btn btn-large btn-light" href="" role="button"  target="_blank">
                     <i class="fa fa-file"></i> Paper</a> </p> 
-              </div> -->
+              </div>
               <div class="column">
                   <p class="mb-5"><a class="btn btn-large btn-light" href="" role="button"  target="_blank">
                     <i class="fa fa-github-alt"></i> Code (Coming Soon) </a> </p>
