--- a/index.html
+++ b/index.html
@@ -255,7 +255,9 @@
 
 
   <footer class="text-center" style="margin-bottom:10px">
-      SurgSora --T.CHEN et al.
+      SurgSora -- T.CHEN et al.
+      <br>
+      Modified from <a href="https://en-do-ra.github.io" target="_blank">this website</a>
   </footer>
 
 </body>
