--- a/index.html
+++ b/index.html
@@ -256,6 +256,7 @@
 
   <footer class="text-center" style="margin-bottom:10px">
       SurgSora -- T. Chen et al.
+	  <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=-LFjYklyqTMVjAA6WR4rDRcqLdocC-undesbTaRMZok&co=2d78ad&cmo=3acc3a&cmn=ff5353&ct=ffffff'></script>
       <br>
       Modified from <a href="https://en-do-ra.github.io" target="_blank">this website</a>
   </footer>
