--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <a href="" target="_blank">Junyi Wang</a><sup>3*</sup>,
                 <a href="https://longbai-cuhk.github.io/" target="_blank">Long Bai</a><sup>3,†</sup>,
                 <a href="https://www.ee.cuhk.edu.hk/en-gb/people/academic-staff/professors/prof-ren-hongliang" target="_blank">Hongliang Ren</a><sup>3</sup>,
-                <a href="http://www.ee.cuhk.edu.hk/~yxyuan/people/people.htm" target="_blank">Luping Zhou</a><sup>1,‡</sup>
+                <a href="https://sites.google.com/view/lupingzhou" target="_blank">Luping Zhou</a><sup>1,‡</sup>
               </h6>
             <p>
                 <sup>1</sup>The University of Sydney &nbsp;&nbsp;
