--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
-      SurgSora: Decoupled RGBD-Flow Diffusion Model for Controllable Surgical Video Generation
+      SurgSora: Object-Aware Diffusion Model for Controllable Surgical Video Generation
     </title>
     <!-- Bootstrap -->
     <link href="css/bootstrap-4.4.1.css" rel="stylesheet">
@@ -67,26 +67,26 @@
             
             <h2> <!-- <img src="./pic/avatar_2.png" alt="" width="80" height="80"> -->
               <i>SurgSora</i>:
-              Decoupled RGBD-Flow Diffusion Model for 
-              Controllable Surgical Video Generation <br>
+              Object-Aware Diffusion Model for 
+		Controllable Surgical Video Generation <br>
             </h2>
             <!-- <h4 style="color:#5a6268;">MICCAI 2024 </h4> -->
             <hr>
             <hr>
             <h6>
-                <a href="https://davismeee.github.io/" target="_blank">Tong Chen</a><sup>1*,†</sup>,
+                <a href="https://davismeee.github.io/" target="_blank">Tong Chen</a><sup>1*</sup>,
                 <a href="" target="_blank">Shuya Yang</a><sup>2*</sup>,
                 <a href="" target="_blank">Junyi Wang</a><sup>3*</sup>,
                 <a href="https://longbai-cuhk.github.io/" target="_blank">Long Bai</a><sup>3,†</sup>,
                 <a href="https://www.ee.cuhk.edu.hk/en-gb/people/academic-staff/professors/prof-ren-hongliang" target="_blank">Hongliang Ren</a><sup>3</sup>,
-                <a href="https://sites.google.com/view/lupingzhou" target="_blank">Luping Zhou</a><sup>1,‡</sup>
+                <a href="https://sites.google.com/view/lupingzhou" target="_blank">Luping Zhou</a><sup>1,†</sup>
               </h6>
             <p>
                 <sup>1</sup>The University of Sydney &nbsp;&nbsp;
                 <sup>2</sup>The University of Hong Kong &nbsp;&nbsp;&nbsp;&nbsp;
                 <sup>3</sup>The Chinese University of Hong Kong &nbsp;&nbsp;&nbsp;&nbsp;
 		<br>
-		*: Equal Contribution; †: Project Lead; ‡: Corresponding Author.
+		*: Equal Contribution; †: Corresponding Author.
             </p> 
             <div class="row justify-content-center">
               <div class="column">
