--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
             </h2>
             <!-- <h4 style="color:#5a6268;">MICCAI 2024 </h4> -->
             <hr>
-		  MICCAI 2025
-            <hr>
+		  Medical Image Computing and Computer Assisted Intervention 2025
+	    <hr>
             <h6>
                 <a href="https://davismeee.github.io/" target="_blank">Tong Chen</a><sup>1*</sup>,
                 <a href="" target="_blank">Shuya Yang</a><sup>2*</sup>,
